--- a/mi-portfolio/src/index.html
+++ b/mi-portfolio/src/index.html
@@ -5,7 +5,7 @@
   <title>MiPortfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="logoweb.ico">
 
     <!-- Icono de 3 barras tumbadas / SIN USO -->
   <link
