--- a/mi-portfolio/src/index.html
+++ b/mi-portfolio/src/index.html
@@ -20,6 +20,8 @@
     rel="stylesheet" 
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
     />
+
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet">
     <!-- Icono para linkedin y github enlaces-->
   <link
     rel="stylesheet"
