--- a/mi-portfolio/src/index.html
+++ b/mi-portfolio/src/index.html
@@ -53,17 +53,29 @@
   <link 
     href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" 
     rel="stylesheet">
+  <!-- Fuente para chakra -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <!-- Fuente para Lato -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 
 </head>
 <body class="mat-typography">
   <div class="background"></div>
   <div class="animaciones">
-    <div class="animacion"></div>
-    <div class="animacion"></div>
-    <div class="animacion"></div>
-    <div class="animacion"></div>
-    <div class="animacion"></div>
-    <div class="animacion"></div>
+    <div class="material-symbols-outlined animacion">code</div>
+    <div class="material-symbols-outlined animacion">code</div>
+    <div class="material-symbols-outlined animacion">code</div>
+    <div class="material-symbols-outlined animacion">code</div>
+    <div class="material-symbols-outlined animacion">code</div>
+    <div class="material-symbols-outlined animacion">code</div>
+    <div class="material-symbols-outlined animacion">code</div>
+    <div class="material-symbols-outlined animacion">code</div>
+    <div class="material-symbols-outlined animacion">code</div>
+    <div class="material-symbols-outlined animacion">code</div>
   </div>
   <app-root></app-root>
 </body>
